Fixed time to shrink on smaller screens

--- a/TicketingApp/site.css
+++ b/TicketingApp/site.css
@@ -25,7 +25,7 @@ h1 {
 
 h2 {
     color: var(--tertiary-text-color);
-    font-size: 1.25em;
+    font-size: 3.2vw;
 }
 
 h3, h4 {
@@ -145,6 +145,12 @@ header {
     position: relative;
     display: none;
     right: 0;
+}
+
+@media only screen and (min-width: 540px) {
+    h2 {
+        font-size: 1.25em;
+    }
 }
 
 @media only screen and (min-width: 1440px) {
